# potree-auth

./: .dockerignore  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  example.env  justfile
.github/workflows/: cargo-deny.yml  release-plz.yml
docs/resources/: manifest.yml  potree.json5
scripts/: build_docker.sh  run_docker.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  observability.rs
src/application/: mod.rs
src/application/extractors/: authentication.rs  authorization.rs  mod.rs  potree_assets.rs  project.rs  project_assets.rs  state.rs  user.rs
src/application/middleware/: session.rs  tracing.rs
src/application/routes/: auth.rs  mod.rs  potree_asset.rs  potree_render.rs  project_asset.rs  state.rs
src/application/utils/: application_error.rs  mod.rs  potree.rs  static_asset.rs
src/application/views/: potree_render.rs
src/application_lib/: cli.rs  config.rs  mod.rs
src/application_lib/http/: mod.rs  router.rs
src/authentication/: mod.rs
src/authentication/application/: error.rs  service.rs
src/authentication/domain/: mod.rs
src/authentication/http/: error.rs  extractors.rs  mod.rs  route_handlers.rs  router.rs  state.rs
src/authentication/ports/: authentication_engine.rs  mod.rs
src/authorization/adapters/: basic_authorization.rs  mod.rs  no_op.rs
src/authorization/domain/: action.rs  error.rs  mod.rs  resource.rs
src/authorization/ports/: authorization_engine.rs  mod.rs
src/cli/: mod.rs
src/common/: mod.rs
src/common/adapters/: mod.rs
src/common/domain/: group.rs  mod.rs  project.rs  resource_type.rs  static_asset.rs  user.rs  value_objects.rs
src/common/ports/: authentication_service.rs  authorization_engine.rs  mod.rs  project_datastore.rs  project_repository.rs
src/domain/: group.rs  mod.rs  project.rs  static_asset.rs  user.rs  utils.rs  value_objects.rs
src/domain/utils/: mod.rs  new_type.rs
src/http/: mod.rs
src/http/extractors/: authentication.rs  authorization.rs  mod.rs  state.rs
src/http/middleware/: mod.rs
src/http/routes/: health_check.rs  potree_render.rs  state.rs
src/http/utils/: auth.rs  potree.rs
src/http/views/: mod.rs  potree_render.rs
src/potree_asset/: mod.rs
src/potree_asset/adapters/: mod.rs
src/potree_asset/http/: error.rs  extractors.rs  mod.rs  route_handlers.rs
src/potree_assets/application/: error.rs  service.rs
src/potree_assets/http/: extractors.rs  mod.rs  router.rs  state.rs
src/potree_assets/ports/: mod.rs  potree_asset_store.rs
src/potree_assets_server/: mod.rs
src/potree_assets_server/application/: error.rs  service.rs
src/potree_assets_server/http/: error.rs  extractors.rs  router.rs  routes.rs  state.rs
src/potree_assets_server/ports/: potree_asset_store.rs
src/potree_auth/: cli.rs  error.rs  factories.rs  mod.rs  observability.rs  shutdown_signal.rs
src/potree_auth/http/: error.rs  factories.rs  mod.rs  router.rs
src/project/: mod.rs
src/project/application/: error.rs  mod.rs  port.rs  service.rs
src/project/domain/: authorization.rs  mod.rs
src/project/ports/: project_repository.rs
src/project_asset/: mod.rs
src/project_asset/application/: error.rs  service.rs
src/project_asset/domain/: authorization.rs
src/project_asset/http/: error.rs  extractors.rs  route_handlers.rs  router.rs
src/project_assets/application/: error.rs  service.rs
src/project_assets/http/: error.rs  mod.rs  route_handlers.rs  router.rs  routes.rs  state.rs
src/project_assets_server/: mod.rs
src/project_assets_server/adapters/: mod.rs
src/project_assets_server/application/: error.rs  service.rs
src/project_assets_server/http/: error.rs  extractors.rs
src/project_assets_server/ports/: mod.rs  project_asset_store.rs
src/render/application/: error.rs  service.rs
src/render/domain/: authorization.rs  error.rs  mod.rs  not_found_render.rs  potree_render.rs  project_dashboard_render.rs
src/render/http/: error.rs  extractors.rs  mod.rs  route_handlers.rs  router.rs  routes.rs  state.rs  utils.rs
src/rendering_server/: mod.rs
src/rendering_server/application/: service.rs
src/rendering_server/domain/: mod.rs  potree_render.rs
src/rendering_server/http/: error.rs  routes.rs
src/services/: mod.rs
src/services/authentication/: mod.rs  oidc_authentication.rs  (+2 more)
src/test_utils/: mod.rs
src/user/: mod.rs
templates/: 404.html  potree_render.html  project_dashboard.html
templates/base/: layout.html
templates/error/: 404.html
templates/potree_render/: index.html
templates/project_dashboard/: index.html  project_card.html
tests/: potree_auth_router.rs
tests/test_utils/: mod.rs
(+87 files in other folders)
