[package]
name = "potree-auth"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "potree-auth"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
async-trait = "0.1.88"
axum = "0.8.4"
bytes = "1.10.1"
clap = { version = "4.5.37", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
mime = "0.3.17"
mime_guess = "2.0.5"
openidconnect = "4.0.0"
potree_embed = { git = "https://github.com/cracky-scans/potree.git", rev = "154c1a8b9fa63e284cf2c16e0c88403974dc4c38", features = [
    "compression",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }
rust-embed = "8.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.0", features = ["fs", "macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
axum-test = "17.3.0"
fake = { version = "4.3.0", features = ["derive"] }
mockall = "0.13.1"
tempfile = "3.19.1"
test-case = "3.3.1"
