[package]
name = "potree-auth"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "potree-auth"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["original-uri"] }
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive", "env"] }
dotenvy = "0.15.7"
http = "1.3.1"
http-body-util = "0.1.3"
mime = "0.3.17"
mime_guess = "2.0.5"
openidconnect = "4.0.1"
potree-embed = "0.1.0-alpha.4"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yml = "0.0.12"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.47.1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = [
    "fs",
    "trace",
    "set-header",
    "normalize-path",
] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
web-route = "0.2.4"


[dev-dependencies]
axum-test = "17.3.0"
fake = { version = "4.3.0", features = ["derive", "url", "http"] }
mockall = "0.13.1"
tempfile = "3.20.0"
test-case = "3.3.1"
web-route = { version = "0.2.4", features = ["fake"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
