[package]
name = "potree-auth"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Authentication and project management for `potree` point clouds."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "potree-auth"

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["original-uri"] }
bytes = "1.10.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
mime = "0.3.17"
mime_guess = "2.0.5"
openidconnect = "4.0.1"
potree-embed = "0.1.0-alpha.4"
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yml = "0.0.12"
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
tower-helmet = "0.3.0"
tower-http = { version = "0.6.4", features = [
    "fs",
    "trace",
    "set-header",
    "normalize-path",
] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.6"
web-route = "0.2.4"

# `fake` feature
fake = { version = "4.4.0", optional = true, features = ["derive", "url", "http"] }

# `mock` feature
mockall = { version = "0.13.1", optional = true }

[dev-dependencies]
axum-test = "18.0.0"
fake = { version = "4.4.0", features = ["derive", "url", "http"] }
mockall = "0.13.1"
tempfile = "3.21.0"
test-case = "3.3.1"
web-route = { version = "0.2.4", features = ["fake"] }

[features]
# Expose implementation of `fake::Dummy` on structs and enums.
fake = ["dep:fake"]
# Expose mocking functionality externally.
mock = ["dep:fake", "dep:mockall"]
# Expose functionality useful for testing
test = ["fake", "mock"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
